--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,10 @@ funcsigs==1.0.2
 idna==2.8
 more-itertools==7.0.0
 numpy==1.16.3
+pathlib2==2.3.3
 Pillow==6.0.0
 pluggy==0.11.0
+protobuf==3.7.1
 py==1.8.0
 pytest==4.5.0
 PyYAML==5.1
@@ -19,8 +21,9 @@ ray==0.6.6
 redis==3.2.1
 requests==2.21.0
 six==1.12.0
+tensorboardX==1.6
 torch==1.1.0
 torchvision==0.2.2.post3
+tqdm==4.32.1
 typing==3.6.6
-urllib3==1.24.3
-wcwidth==0.1.7
+urllib3==1.24.
