Dockerfile fixed by Paul

--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -1,6 +1,12 @@
-FROM nvidia/cuda:9.0-runtime-ubuntu16.04 
+FROM pytorch/pytorch:1.2-cuda10.0-cudnn7-devel
 LABEL Description="This is an image for the SS4TL repo"
 LABEL version="0.1"
+
+# Debian method:
+#RUN curl -k https://access.llnl.gov/cspca.cer \
+#    -o /usr/local/share/ca-certificates/cspca.crt && update-ca-certificates
+COPY cspca.crt /usr/local/share/ca-certificates/cspca.crt    
+RUN update-ca-certificates
 
 # Update packages system packages so it can find wget and ca-certificates
 # Non-standard packages will FAIL because the labs cert is NOT installed yet. To get
@@ -8,32 +14,34 @@ LABEL version="0.1"
 RUN apt-get update | true
 # Here we are updating the image packages and installing the following packages:
 # # ca-certificates and wget.
-RUN apt-get install -y wget \
-					ca-certificates 
+
+
+#RUN apt-get install -y wget ca-certificates 
 
 # Install LLNL Cert
-RUN wget https://access.llnl.gov/cspca.cer --no-check-certificate \
-    -O /usr/local/share/ca-certificates/cspca.crt | true
+#RUN wget https://access.llnl.gov/cspca.cer --no-check-certificate \
+#    -O /usr/local/share/ca-certificates/cspca.crt | true
 
 
 # Update the system, so that it is aware of the new cert.
-RUN update-ca-certificates
+#RUN update-ca-certificates
+
 
 # No make sure we update ALL packages now that lab certs are setup. 
-RUN apt-get update && apt-get install -y --no-install-recommends apt-utils
+#RUN apt-get update && apt-get install -y --no-install-recommends apt-utils
 
 
 # Developer Essentials
 RUN apt-get install -y --no-install-recommends git curl openssh-client \ 
-wget emacs vim
+emacs vim
 
 
 # For convenience, alisas (but don't sym-link) python & pip to python3 & pip3 as recommended in:
 # http://askubuntu.com/questions/351318/changing-symlink-python-to-python3-causes-problems
-RUN apt-get install -y --no-install-recommends python3.5 python3.5-dev python3-pip
-RUN pip3 install --no-cache-dir --upgrade pip setuptools
-RUN echo "alias python='python3'" >> /root/.bash_aliases
-RUN echo "alias pip='pip3'" >> /root/.bash_aliases
+#RUN apt-get install -y --no-install-recommends python3.5 python3.5-dev python3-pip
+#RUN pip3 install --no-cache-dir --upgrade pip setuptools
+#RUN echo "alias python='python3'" >> /root/.bash_aliases
+#RUN echo "alias pip='pip3'" >> /root/.bash_aliases
 
 COPY requirements.txt /home/requirements.txt
 RUN pip install -r /home/requirements.txt
