--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,6 @@ pluggy==0.11.0
 protobuf==3.8.0
 py==1.8.0
 pytest==4.5.0
-PyYAML==5.1
 ray==0.6.6
 redis==3.2.1
 requests==2.21.0
@@ -27,8 +26,8 @@ scipy==1.3.0
 six==1.12.0
 sklearn==0.0
 tensorboardX==1.7
-torch==1.1.0
-torchvision==0.2.2.post3
+#torch==1.2.0
+#torchvision==0.2.2.post3
 typing==3.6.6
 urllib3==1.24.3
 wcwidth==0.1.7
